--- a/src/index.html
+++ b/src/index.html
@@ -1,40 +1,35 @@
 <!DOCTYPE html>
 <html lang="en-US">
 <head>
-  <!-- General meta tags needed-->
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <!-- Needed for responsive design -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <!-- If you want custom browser colors on mobile -->
-  <meta name="theme-color" content="#1843c1" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="#1843c1">
   <title>Front-end Boilerplate</title>
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:400,700" rel="stylesheet">
   <link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">
   <link rel="icon" href="./images/favicon/favicon.ico" type="image/x-icon">
   <!-- CSS File -->
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  <main>
-    <section class="content">
-      <h1>Front-end Boilerplate (v1.0)</h1>
-      <h2>Using Sass and Gulp</h2>
-      <p>Here's a quick set-up guide:</p>
+  <!-- Delete below and write your code here. -->
+  <div id="app">
+    <section>
+      <h1>Front-end Boilerplate</h1>
+      <p>Version: 1.0.0</p>
+      <h3>Here's a quick set-up guide:</h3>
       <ol>
         <li>Clone Git repo</li>
         <li>Install by running "npm install" on the commmand line</li>
         <li>Run "gulp" on the command line.</li>
       </ol>
     </section>
-  </main>
+  </div>
 
-  <!-- JavaScript Libs -->
+
+  <!-- Import JavaScript External Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
-  <!-- JavaScript File -->
-  <script src="./js/script.js"></script>
+  <!-- Main JavaScript File -->
+  <script src="./js/main.js"></script>
 </body>
 </html>
