Split gulpfile into separate modules.

--- a/src/index.html
+++ b/src/index.html
@@ -9,22 +9,25 @@
   <link rel="icon" href="./images/favicon/favicon.ico" type="image/x-icon">
   <!-- CSS File -->
   <link rel="stylesheet" href="./css/main.css">
+  <link rel="stylesheet" href="./css/sub.css">
 </head>
 <body>
   <!-- Delete below and write your code here. -->
   <div id="app">
     <section>
       <h1>Front-end Boilerplate</h1>
-      <p>Version: 1.0.0</p>
-      <h3>Here's a quick set-up guide:</h3>
+      <div><span>Version: 1.2.0</span></div>
+      <h3>Quick Start</h3>
       <ol>
-        <li>Clone Git repo</li>
-        <li>Install by running "npm install" on the commmand line</li>
-        <li>Run "gulp" on the command line.</li>
+        <li>Clone Git repo or download ZIP file.</li>
+        <li>Install by running "npm install" on the commmand line.</li>
+        <li>Run "npm start" on the command line.</li>
       </ol>
+      <p>*To use the boilerplate you have to pre-install Node.js.</p>
+      <h3>Production build</h3>
+      <p>Use command "npm run build" to use production build.</p>
     </section>
   </div>
-
 
   <!-- Import JavaScript External Libraries -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
