--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,6 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- Main JavaScript File -->
-  <script src="./js/main.js"></script>
+  <script src="./js/bundle.js"></script>
 </body>
 </html>
