--- a/src/index.html
+++ b/src/index.html
@@ -1,38 +1,61 @@
 <!DOCTYPE html>
 <html lang="en-US">
+
 <head>
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Front-end Boilerplate</title>
+  <title>Home</title>
   <link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">
   <link rel="icon" href="./images/favicon/favicon.ico" type="image/x-icon">
   <!-- CSS File -->
   <link rel="stylesheet" href="./css/main.css">
-  <link rel="stylesheet" href="./css/sub.css">
 </head>
+
 <body>
-  <!-- Delete below and write your code here. -->
-  <div id="app">
-    <section>
-      <h1>Front-end Boilerplate</h1>
-      <div><span>Version: 1.2.0</span></div>
-      <h3>Quick Start</h3>
-      <ol>
-        <li>Clone Git repo or download ZIP file.</li>
-        <li>Install by running "npm install" on the commmand line.</li>
-        <li>Run "npm start" on the command line.</li>
+  <div id="main" class="introduction">
+    <h1 class="introduction__headline">Static Site Boilerplate</h1>
+    <div class="introduction__version-info"><span>Version: 0.1.0 beta</span></div>
+    <article class="introduction__article article">
+      <h2 class="article__headline">Quick Start</h2>
+      <ol class="article__order-list">
+        <li class="article__order-list-item">
+          <p>Install by running "npm install" command.</p>
+        </li>
+        <li class="article__order-list-item">
+          <p>Run "npm start" to enter development mode.</p>
+        </li>
+        <li class="article__order-list-item">
+          <p>Run "npm build" to create a production build.</p>
+        </li>
       </ol>
-      <p>*To use the boilerplate you have to pre-install Node.js.</p>
-      <h3>Production build</h3>
-      <p>Use command "npm run build" to use production build.</p>
-    </section>
+      <p class="special-message">
+        <i>*To use the boilerplate you have to pre-install Node.js.</i>
+      </p>
+      <p class="special-message">
+        <i>*This is a beta version of the static site boilerplate. Feel free to play with it.</i>
+      </p>
+      <p class="special-message">
+        <i>*The goal is to build a boilerplate that has more features and high performance.</i>
+      </p>
+      <div class="article__image-container">
+        <img class="article__image" src="./images/sample/image.jpg" alt="Studio shot of the monstera plant leaf" />
+      </div>
+    </article>
   </div>
 
-  <!-- Import JavaScript External Libraries -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
+  <!-- External JavaScript Libries -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"
+    integrity="sha512-2fk3Q4NXPYAqIha0glLZ2nluueK43aNoxvijPf53+DgL7UW9mkN+uXc1aEmnZdkkZVvtJZltpRt+JqTWc3TS3Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"
+    integrity="sha512-BrvVYNhKh6yST24E5DY/LopLO5d+8KYmIXyrpBIJ2PK+CyyJw/cLSG/BfJomWLC1IblNrmiJWGlrGueKLd/Ekw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Main JavaScript File -->
   <script src="./js/bundle.js"></script>
 </body>
+
 </html>
