change several files path and output JavaScript file's name

--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,7 @@
           <p>Run "npm build" to create a production build.</p>
         </li>
       </ol>
+      <hr class="article__section-line">
       <p class="special-message">
         <i>*To use the boilerplate you have to pre-install Node.js.</i>
       </p>
@@ -36,10 +37,10 @@
         <i>*This is a beta version of the static site boilerplate. Feel free to play with it.</i>
       </p>
       <p class="special-message">
-        <i>*The goal is to build a boilerplate that has more features and high performance.</i>
+        <i>*The goal is to build a boilerplate that has more features with high build performance.</i>
       </p>
       <div class="article__image-container">
-        <img class="article__image" src="./images/sample/image.jpg" alt="Studio shot of the monstera plant leaf" />
+        <img class="article__image" src="./images/sample/image.jpg" alt="Studio shot of the monstera plant leaf" loading="lazy"/>
       </div>
     </article>
   </div>
@@ -55,7 +56,7 @@
     integrity="sha512-BrvVYNhKh6yST24E5DY/LopLO5d+8KYmIXyrpBIJ2PK+CyyJw/cLSG/BfJomWLC1IblNrmiJWGlrGueKLd/Ekw=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Main JavaScript File -->
-  <script src="./js/bundle.js"></script>
+  <script src="./js/main.js"></script>
 </body>
 
 </html>
