--- a/src/index.html
+++ b/src/index.html
@@ -7,13 +7,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="Web site created using static-site-boilerplate" />
   <title>Home</title>
-  <link rel="shortcut icon" href="./images/favicon/favicon.ico" type="image/x-icon">
-  <link rel="icon" href="./images/favicon/favicon.ico" type="image/x-icon">
-  <!-- CSS File -->
+  <link rel="shortcut icon" href="./assets/images/favicon/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./assets/images/favicon/favicon.ico" type="image/x-icon">
+  <!-- Web Fonts -->
+  <!-- Add Google Fonts, Adobe Fonts at here. -->
+  <!-- Main CSS File -->
   <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
+  <!--
+    This HTML file is a template.
+
+    You can add webfonts, meta tags, or analytics to this file.
+    To begin the development, run `npm start`.
+    To create a production bundle, use `npm run build`.
+  -->
   <header class="GlobalHeader">
     <nav class="GlobalNavigation">
       <h1 class="GlobalNavigation__headline">Static Site Boilerplate</h1>
@@ -47,9 +56,6 @@
       <p class="special-message">
         <i>*The boilerplate now support using React(beta 2021.07.12).</i>
       </p>
-      <!-- <div class="article__image-container">
-        <img class="article__image" src="./images/sample/image.jpg" alt="Studio shot of the monstera plant leaf" loading="lazy"/>
-      </div> -->
     </article>
     
     <!-- React application root container -->
@@ -58,14 +64,7 @@
   </div>
 
   <!-- External JavaScript Libries -->
-  <!-- jQuery -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
-    integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- GSAP -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"
-    integrity="sha512-2fk3Q4NXPYAqIha0glLZ2nluueK43aNoxvijPf53+DgL7UW9mkN+uXc1aEmnZdkkZVvtJZltpRt+JqTWc3TS3Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
   <!-- Main JavaScript File -->
   <script src="./js/main.bundle.js"></script>
 </body>
