Refactor default SCSS template using from @import to @use rule instead

--- a/src/demo.html
+++ b/src/demo.html
@@ -17,8 +17,8 @@
   <div class="Presentation">
     <article class="Presentation__article">
       <div class="Presentation__headline-container">
-        <p class="Presentation__headline-text-small">The Static Site</p>
-        <h2 class="Presentation__headline-text-normal">Boilerplate</h2>
+        <p class="Presentation__headline-text Presentation__headline-text--small">The Static Site</p>
+        <h2 class="Presentation__headline-text Presentation__headline-text--normal">Boilerplate</h2>
       </div>
       <div class="Presentation__version-info">Version 0.1.0 beta</div>
       <div class="Presentation__section-line"></div>
@@ -36,6 +36,9 @@
 
   <!-- External JavaScript Libries -->
   <!-- GSAP -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/CSSRulePlugin.min.js"
+    integrity="sha512-EIzKYNrmzSj8Q5czLrNi/F6bplhopAp2Li9nk/8r7MW+Ov9KPEo0xrjWMYXU8lFYy5dzh/w8Ql5ShZHucrjXdg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"
     integrity="sha512-2fk3Q4NXPYAqIha0glLZ2nluueK43aNoxvijPf53+DgL7UW9mkN+uXc1aEmnZdkkZVvtJZltpRt+JqTWc3TS3Q=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
