--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,7 @@
   <link rel="icon" href="./assets/images/favicon/favicon.ico" type="image/x-icon">
   <!-- Web Fonts -->
   <!-- Add Google Fonts, Adobe Fonts at here. -->
+
   <!-- Main CSS File -->
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -23,53 +24,8 @@
     To begin the development, run `npm start`.
     To create a production bundle, use `npm run build`.
   -->
-  <header class="GlobalHeader">
-    <nav class="GlobalNavigation">
-      <h1 class="GlobalNavigation__headline">Static Site Boilerplate</h1>
-      <div class="GlobalNavigation__version-info"><span>Version: 0.1.0 beta</span></div>
-    </nav>
-  </header>
-  <div class="introduction">
-    <article class="introduction__article article">
-      <h2 class="article__headline">Quick Start</h2>
-      <ol class="article__order-list">
-        <li class="article__order-list-item">
-          <p>Install by running "npm install" command.</p>
-        </li>
-        <li class="article__order-list-item">
-          <p>Run "npm start" to enter development mode.</p>
-        </li>
-        <li class="article__order-list-item">
-          <p>Run "npm build" to create a production build.</p>
-        </li>
-      </ol>
-      <hr class="article__section-line">
-      <p class="special-message">
-        <i>*To use the boilerplate you have to pre-install Node.js.</i>
-      </p>
-      <p class="special-message">
-        <i>*This is a beta version of the static site boilerplate. Feel free to play with it.</i>
-      </p>
-      <p class="special-message">
-        <i>*The goal is to build a boilerplate that has more features with high build performance.</i>
-      </p>
-      <p class="special-message">
-        <i>*The boilerplate now support using React(beta 2021.07.12).</i>
-      </p>
-    </article>
-    
-    <!-- React application root container -->
-    <div id="react-app-root"></div>
+  <h1>Hello World!</h1>
 
-  </div>
-
-  <!-- External JavaScript Libries -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/CSSRulePlugin.min.js"
-    integrity="sha512-EIzKYNrmzSj8Q5czLrNi/F6bplhopAp2Li9nk/8r7MW+Ov9KPEo0xrjWMYXU8lFYy5dzh/w8Ql5ShZHucrjXdg=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.0/gsap.min.js"
-    integrity="sha512-2fk3Q4NXPYAqIha0glLZ2nluueK43aNoxvijPf53+DgL7UW9mkN+uXc1aEmnZdkkZVvtJZltpRt+JqTWc3TS3Q=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- Main JavaScript File -->
   <script src="./js/main.bundle.js"></script>
 </body>
